- Updated movement checks for mounts and mount extensions
- Cannon Mounts can now be placed upside-down
 - Cannon Mounts can also be flipped by using the wrench
- Changed Cannon Mount item model to be more consistent with in-world appearance
Fixed:
- Fixed rendering of pitch shaft for down-facing cannons
- Fixed display on some ponders

5.7.2

Create Big Cannons 5.7.2. Critical patch for Copycats+ compat.

Fixed:
- Fixed Copycats+ compat

5.7.1

Create Big Cannons 5.7.1. Now supports Create 0.5.1 patch J on Forge/NeoForge and Fabric/Quilt.
Only 1.20.1 is supported, as Create 0.5.1.j only supports that version. Mod versions on Minecraft 1.18.2 and 1.19.2 will no longer receive support.
5.7.0 was initially released but has been bypassed due to critical fixes required.

Added:
- Added highlighting and documentation for base fuzes
  - Can be toggled in client config
- Added fuzed models for big cannon shell items
Changed:
- Updated Polish translation courtesy of KarolOfGutovo
- Changed AP Shell texture to better show base fuze location
- Changed wording on some tooltips
- Made the Quick-Firing Breech openable using the side lever
- Copycats+ is now supported for 2.1.4
  - Added more support for Copycats+ block armor properties
  - Copycats+ 1.2.5 is the minimum supported version
Fixed:
- Fixed autocannon round duplication glitch
- Fixed projectile ground tracking
- Fixed strength attributes for incomplete and unbored sliding breeches to be consistent with complete sliding breeches
- Fixed elevator assembly issue
- Fixed sticky piston loading
- Fixed pulley sync

5.6.0

Create Big Cannons 5.6.0. Now supports Create 0.5.1 patch I.
Comes with a few fixes and updates.

Added:
- Added Create: Unify as a required dependency for obtaining bronze and steel
- Added Finnish translation courtesy of Apinoita
Changed:
- Updated Create Big Cannons logo to new style
- Updated Ukrainian translation courtesy of kyryloborsch